--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                            <p>
 
                               Easy going, anti - inflammatory, with mild flavor profile. Caffeine free and mildly floral
-                              with a bright lemon finish.
+                              with a bright lemon finish that is loaded with nootropics.
                            </p>
 
                            <h4>Earl Grey</h4>
@@ -208,9 +208,9 @@
 
                            </p>
 
-                           <h4> Chaga</h4>
-                           <p>Bright and zesty, this blend uses the healing power of tumeric to refresh the system,
-                              cleanse and calm while energizing and optimizing the body’s effectiveness.
+                           <h4> Tumeric Ginger</h4>
+                           <p>Bright and zesty, blend uses the healing power of tumeric and chaga to refresh the system,
+                              cleanse and calm while energizing and optimizing the body’s effectiveness. This blend also has a high concentration of nootropics.
                            </p>
                            <h4> Chai Hibiscus
                            </h4>
