--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
                            <h3>Medicinal Tins: Tea Strains and Flavor Profile</h3>
                            <p>
 
-                              2 Sizes: Micro Tins <b>$29.00</b> - Macro Tins <b>$49.00</b>
+                              2 Sizes: Micro Tins <b>$39.00</b> - Macro Tins <b>$59.00</b>
+                              Case discounts are available
                               Micro Dose of 9 X .35G Tea Bags per tin - Macro Dose of 5 X 1.2 G Bags per tin
                            </p>
                            <h4> Red Reishi</h4>
@@ -224,14 +225,14 @@
                            </p>
 
                           <h4> Packaging Sizes</h4>
-                          <p>Micro Tin <bold>$29.00</bold> - Each micro tin contains 9 tea bags.  Each bag has .35G of our active ingredients combined with a proprietary blend of teas selected to provide a synergistic experience with the mushrooms.
+                          <p>Micro Tin <bold>$39.00</bold> - Each micro tin contains 9 tea bags.  Each bag has .35G of our active ingredients combined with a proprietary blend of teas selected to provide a synergistic experience with the mushrooms.
 
                         </p>
 
-                           <p>Macro Tin <bold>$49.00</bold> - Each macro tin contains 5 tea bags.  Each bag has 1.2G of our active ingredient combined with our proprietary blend of teas.</p>
+                           <p>Macro Tin <bold>$59.00</bold> - Each macro tin contains 5 tea bags.  Each bag has 1.2G of our active ingredient combined with our proprietary blend of teas.</p>
 
 <h4> Brewing</h4>
-<p>We recommend that the tea is brewed at 150 F for 5 minutes.  A stronger effect can be created by adding a squeeze of lemon while brewing.
+<p>For ideal brewing use water heated 150 F for 5 minutes.  A stronger effect can be created by adding a squeeze of lemon while brewing.
 </p>
 <h4> Dosing schedule</h4>
 <p>We recommend a one day on and one day off schedule but some will find that their body needs more time to recalibrate between doses.  Try moving to every third day if you find the effect to reduce over time.
