--- a/index.html
+++ b/index.html
@@ -204,13 +204,13 @@
 
                            <h4>Earl Grey</h4>
                            <p>
-                              Soothing and stimulating in one bland. Early grey and pea blossom combine to provide a
-                              brilliant blue tea with lavender to round out the experience.
+                              Soothing and stimulating in one blend. Earl Grey and lavender combine to provide a
+                              brilliant blue tea to round out the experience.
 
                            </p>
 
-                           <h4> Tumeric Ginger</h4>
-                           <p>Bright and zesty, blend uses the healing power of tumeric and chaga to refresh the system,
+                           <h4> Turmeric Ginger</h4>
+                           <p>Bright and zesty, blend uses the healing power of turmeric and chaga to refresh the system,
                               cleanse and calm while energizing and optimizing the body’s effectiveness. This blend also has a high concentration of nootropics.
                            </p>
                            <h4> Chai Hibiscus
@@ -218,10 +218,10 @@
                            <p>Comforting cinnamon, cardamom, and clove spices are brightened with tart and brilliant hibiscus in a curiously frisky blend. Try with a splash of your favorite oat or almond milk.
                            </p>
                            <h4> Cacao Mint</h4>
-                           <p> A warm mint chamomile with a creamy finish chamomile to cool off & refresh. Engineered with whole raw cocoa pods, american mint, and coconut , this blend is comforting and crisp.
+                           <p> A warm mint chamomile with a creamy finish to cool off & refresh. Engineered with whole raw cocoa pods, american mint, and coconut , this blend is comforting and crisp.
                            </p>
                            <h4> Blue Matcha</h4>
-                           <p> Bursting with caffeine and clarifying moringa leaves, mango and  pea blosoms.  This blend will energize your day and with amild sweet flavor bursting with aqua to bring brilliant color to your day. 
+                           <p> Bursting with caffeine and clarifying moringa leaves, mango and  pea blosoms.  This blend will energize your day with a mild sweet flavor bursting with aqua to bring brilliant color to your day. 
                            </p>
 
                           <h4> Packaging Sizes</h4>
