--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@
                            </p>
 
                           <h4> Packaging Sizes</h4>
-                          <p>Micro Tin <bold>$45.00</bold> - Each micro tin contains 9 tea bags.  Each bag has .35G of our active ingredients combined with a proprietary blend of teas selected to provide a synergistic experience with the mushrooms.
+                          <p>Micro Tin <bold>$45.00</bold> - Each micro tin contains 9 tea bags.  Each bag has .35G of our active ingredients combined with a proprietary blend of teas selected to provide a synergistic experience with the mushrooms. Individual Micro-dose is $10.00 each.
 
                         </p>
 
-                           <p>Macro Tin <bold>$65.00</bold> - Each macro tin contains 5 tea bags.  Each bag has 1.2G of our active ingredient combined with our proprietary blend of teas.</p> 
+                           <p>Macro Tin <bold>$65.00</bold> - Each macro tin contains 5 tea bags.  Each bag has 1.2G of our active ingredient combined with our proprietary blend of teas.</p>  Individual Macro-dose is $20.00 each.
 
 
 
